# mb-data-warehouse

./: .gitignore  LICENSE  README.md  conf.py  emr_run.py  index.rst  main.py  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
conf/: app.yaml
mbdw/: main.py  storage_interface.py
mbdw/data_quality/: quality_module.py
mbdw/interfaces/: logger.py  storage_interface.py
mbdw/model/: facts.py  issues.py  issues_prs.py  labels.py  milestones.py  pull_requests.py
scripts/: clean_s3.py  s3_uploader.py
src/: etl.py  loader.py  main.py  storage_interface.py
src/mbdw/: main.py
src/mbdw/model/: facts.py  issues.py  labels.py  milestones.py  pull_requests.py
src/model/: facts.py  issues.py  labels.py  milestones.py  pull_requests.py
src/resources/schemas/: issues_json_schema
tests/mbdw/: test_storage_interface.py
tests/mbdw/model/: test_issues.py  test_labels.py  test_milestones.py  test_pull_requests.py
tests/mbdw/resources/sample_issues/: issue3.json
tests/mbdw/src/: test_storage_interface.py
tests/mbdw/src/model/: test_issues.py  test_labels.py  test_milestones.py  test_pull_requests.py
tests/src/: test_storage_interface.py
tests/src/model/: test_issues.py  test_labels.py  test_loader.py  test_milestones.py  test_pull_requests.py
tests/src/resources/sample_issues/: issue1.json  issue2.json
tests/src/resources/sample_prs/: pr1.json  pr2.json  pr3.json
