[project]
name = "mbdw"
version = "0.0.1"
authors = [
  { name="Andreas Kreitschmann", email="a.kreitschmann@gmail.com" }]

dependencies = [
        'alabaster==0.7.13',
        'aws-emr-cli==0.0.1',
        'Babel==2.12.1',
        'boto==2.49.0',
        'boto3==1.26.157',
        'botocore==1.29.157',
        'certifi==2023.5.7',
        'charset-normalizer==3.1.0',
        'click==7.1.2',
        'colorama==0.4.6',
        'docutils==0.20.1',
        'emr-cli==0.0.9',
        'exceptiongroup==1.1.1',
        'idna==3.4',
        'imagesize==1.4.1',
        'iniconfig==2.0.0',
        'Jinja2==3.1.2',
        'jmespath==1.0.1',
        'MarkupSafe==2.1.3',
        'packaging==23.1',
        'pluggy==1.2.0',
        'py4j==0.10.9.7',
        'Pygments==2.15.1',
        'pydeequ=1.0.1',
        'pyspark==3.4.0',
        'pytest==7.3.2',
        'python-dateutil==2.8.2',
        'PyYAML==6.0',
        'requests==2.31.0',
        's3transfer==0.6.1',
        'six==1.16.0',
        'snowballstemmer==2.2.0',
        'tomli==2.0.1',
        'urllib3==1.26.16'
]

[project.optional-dependencies]
tests = [
  'pytest==7.3.2',
]